<resources>
    <string name="app_name">TrackIt</string>
    <string name="image_description">image_description</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="loading">" Loading…"</string>
    <string name="start_sending">Start sending</string>

    <string-array name="cars">
        <item>Car 1</item>
        <item>Car 2</item>
    </string-array>

</resources>